# minir

./: Bench.hs  CorpusStats.hs  Dictionary.hs  DiskMapTest.hs  DiskStoreTest.hs  FreqMap.hs  NGramTrie.hs  OrderedIndex.hs  PDFIndex.hs  PDFTest.hs  PostingListTest.hs  Query.hs  SequentialDependence.hs  TermIndex.hs  Test.hs  Types.hs  UnorderedIndex.hs  minIR.cabal  seqdep.cabal
Data/: BiHashMap.hs
Data/Foldable/: Strict.hs
MinIR/: BlobStore.hs  CorpusStats.hs  Dictionary.hs  DiskStore.hs  FreqMap.hs  NGramTrie.hs  OrderedIndex.hs  PostingList.hs  SequentialDependence.hs  TermIndex.hs  Types.hs  UnorderedIndex.hs
MinIR/BlobStore/: Reader.hs  Types.hs  Writer.hs
MinIR/DiskMap/: Internal.hs
MinIR/PostingList/: Builder.hs  Reader.hs  Types.hs
tools/: Index.hs  PDFIndex.hs  Query.hs  Types.hs  minIR-tools.cabal
