name:                minIR-tools
version:             0.1.0.0
synopsis:            A small information retrieval library in Haskell
-- description:
homepage:            http://github.com/bgamari/MinIR
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable minir-query
  main-is:             Query.hs
  build-depends:       base ==4.6.*, text ==0.11.*, binary ==0.7.*, hashable ==1.2.*, text-binary ==0.1.*, process ==1.1.*, directory ==1.2.*, mtl, lens, minIR, stemmer
  default-language:    Haskell2010

executable minir-index
  main-is:             Index.hs
  build-depends:       base ==4.6.*, text ==0.11.*, binary ==0.7.*, hashable ==1.2.*, text-binary ==0.1.*, process ==1.1.*, directory ==1.2.*, mtl, lens, minIR, stemmer
  default-language:    Haskell2010